assets/sass/components/_navigation.scss
/* ===========================================================
  Navigation
============================================================ */

#menu-main-menu,
#menu-footer-menu {
  @include bp(md) {
    padding: 20px 0;
  }
  li {
    text-align: center;
  }
  a {
    font-weight: 700;
  }
}

#menu-main-menu {
  @include bp(md) {
    margin: 20px 10%;
  }
}

.menu-item {
  width: 100%;
  margin: 10px 0;
  @include bp(md) {
    width: auto;
    margin: 0;
  }
}

